JMH benchmark: support real wiki data, report compression ratio and indexing time